// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RestrictedPage/> should render for a specific page 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <h1
      class="d-flex align-items-center"
    >
      Billing
    </h1>
  </div>
  <div
    class="content"
  >
    <div
      class="badge"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-color="red"
        data-corner="round"
        data-name="badge"
        data-type="light-error"
      >
        Admin
      </div>
    </div>
    <h2
      class="heading"
    >
      Restricted access
    </h2>
    <p
      class="description"
    >
      To be able to see 
      Billing
       you need to be 
      an
       
      <b>
        Admin or Internal Agent
      </b>
      .
    </p>
    <a
      class="link"
      href="https://docs.gorgias.com/user/adding-team-members#user_permissions"
      rel="noopener noreferrer"
      target="_blank"
    >
      See all permissions
    </a>
  </div>
</div>
`;

exports[`<RestrictedPage/> should render for admin role and include higher permission roles 1`] = `
<div
  class="full-width"
>
  <div
    class="content"
  >
    <div
      class="badge"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-color="red"
        data-corner="round"
        data-name="badge"
        data-type="light-error"
      >
        Admin
      </div>
    </div>
    <h2
      class="heading"
    >
      Restricted access
    </h2>
    <p
      class="description"
    >
      To be able to see 
      this page
       you need to be 
      an
       
      <b>
        Admin or Internal Agent
      </b>
      .
    </p>
    <a
      class="link"
      href="https://docs.gorgias.com/user/adding-team-members#user_permissions"
      rel="noopener noreferrer"
      target="_blank"
    >
      See all permissions
    </a>
  </div>
</div>
`;

exports[`<RestrictedPage/> should render for agent role and include higher permission roles 1`] = `
<div
  class="full-width"
>
  <div
    class="content"
  >
    <div
      class="badge"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-color="orange"
        data-corner="round"
        data-name="badge"
        data-type="light-warning"
      >
        Lead
      </div>
    </div>
    <h2
      class="heading"
    >
      Restricted access
    </h2>
    <p
      class="description"
    >
      To be able to see 
      this page
       you need to be 
      a
       
      <b>
        Lead Agent, Admin or Internal Agent
      </b>
      .
    </p>
    <a
      class="link"
      href="https://docs.gorgias.com/user/adding-team-members#user_permissions"
      rel="noopener noreferrer"
      target="_blank"
    >
      See all permissions
    </a>
  </div>
</div>
`;

exports[`<RestrictedPage/> should render for basic-agent role and include higher permission roles 1`] = `
<div
  class="full-width"
>
  <div
    class="content"
  >
    <div
      class="badge"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-color="teal"
        data-corner="round"
        data-name="badge"
        data-type="teal"
      >
        Basic
      </div>
    </div>
    <h2
      class="heading"
    >
      Restricted access
    </h2>
    <p
      class="description"
    >
      To be able to see 
      this page
       you need to be 
      a
       
      <b>
        Basic Agent, Lead Agent, Admin or Internal Agent
      </b>
      .
    </p>
    <a
      class="link"
      href="https://docs.gorgias.com/user/adding-team-members#user_permissions"
      rel="noopener noreferrer"
      target="_blank"
    >
      See all permissions
    </a>
  </div>
</div>
`;

exports[`<RestrictedPage/> should render for bot role and include higher permission roles 1`] = `
<div
  class="full-width"
>
  <div
    class="content"
  >
    <div
      class="badge"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-color="blue"
        data-corner="round"
        data-name="badge"
        data-type="blue"
      >
        Bot
      </div>
    </div>
    <h2
      class="heading"
    >
      Restricted access
    </h2>
    <p
      class="description"
    >
      To be able to see 
      this page
       you need to be 
      an
       
      <b>
        Internal Agent
      </b>
      .
    </p>
    <a
      class="link"
      href="https://docs.gorgias.com/user/adding-team-members#user_permissions"
      rel="noopener noreferrer"
      target="_blank"
    >
      See all permissions
    </a>
  </div>
</div>
`;

exports[`<RestrictedPage/> should render for internal-agent role and include higher permission roles 1`] = `
<div
  class="full-width"
>
  <div
    class="content"
  >
    <div
      class="badge"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-color="blue"
        data-corner="round"
        data-name="badge"
        data-type="blue"
      >
        Gorgias Support
      </div>
    </div>
    <h2
      class="heading"
    >
      Restricted access
    </h2>
    <p
      class="description"
    >
      To be able to see 
      this page
       you need to be 
      an
       
      <b>
        Internal Agent
      </b>
      .
    </p>
    <a
      class="link"
      href="https://docs.gorgias.com/user/adding-team-members#user_permissions"
      rel="noopener noreferrer"
      target="_blank"
    >
      See all permissions
    </a>
  </div>
</div>
`;

exports[`<RestrictedPage/> should render for lite-agent role and include higher permission roles 1`] = `
<div
  class="full-width"
>
  <div
    class="content"
  >
    <div
      class="badge"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-color="purple"
        data-corner="round"
        data-name="badge"
        data-type="light-purple"
      >
        Lite
      </div>
    </div>
    <h2
      class="heading"
    >
      Restricted access
    </h2>
    <p
      class="description"
    >
      To be able to see 
      this page
       you need to be 
      a
       
      <b>
        Lite Agent, Basic Agent, Lead Agent, Admin or Internal Agent
      </b>
      .
    </p>
    <a
      class="link"
      href="https://docs.gorgias.com/user/adding-team-members#user_permissions"
      rel="noopener noreferrer"
      target="_blank"
    >
      See all permissions
    </a>
  </div>
</div>
`;

exports[`<RestrictedPage/> should render for observer-agent role and include higher permission roles 1`] = `
<div
  class="full-width"
>
  <div
    class="content"
  >
    <div
      class="badge"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-color="grey"
        data-corner="round"
        data-name="badge"
        data-type="light-grey"
      >
        Observer
      </div>
    </div>
    <h2
      class="heading"
    >
      Restricted access
    </h2>
    <p
      class="description"
    >
      To be able to see 
      this page
       you need to be 
      an
       
      <b>
        Observer Agent, Lite Agent, Basic Agent, Lead Agent, Admin or Internal Agent
      </b>
      .
    </p>
    <a
      class="link"
      href="https://docs.gorgias.com/user/adding-team-members#user_permissions"
      rel="noopener noreferrer"
      target="_blank"
    >
      See all permissions
    </a>
  </div>
</div>
`;
